pandas make me :>

--- a/Python/pandas-praticing.ipynb
+++ b/Python/pandas-praticing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "c  30"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,35 +218,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Food   Cost        Place\n",
-      "0       Pho  2 USD       Ha Noi\n",
-      "1   Bun Cha  3 USD       Ha Noi\n",
-      "2   Banh Mi  1 USD  Ho Chi Minh\n",
-      "3  Banh Xeo  2 USD      Da Nang \n",
+      "       Food Cost        Place\n",
+      "0       Pho    2       Ha Noi\n",
+      "1   Bun Cha    3       Ha Noi\n",
+      "2   Banh Mi    1  Ho Chi Minh\n",
+      "3  Banh Xeo    2      Da Nang \n",
       "\n",
       "         Place      Scenic Spots\n",
       "0       Ha Noi         West Lake\n",
       "1  Ho Chi Minh  Ben Thanh Market\n",
       "2      Da Nang      My Khe Beach \n",
       "\n",
-      "       Food   Cost        Place      Scenic Spots\n",
-      "0       Pho  2 USD       Ha Noi         West Lake\n",
-      "1   Bun Cha  3 USD       Ha Noi         West Lake\n",
-      "2   Banh Mi  1 USD  Ho Chi Minh  Ben Thanh Market\n",
-      "3  Banh Xeo  2 USD      Da Nang      My Khe Beach \n",
+      "       Food Cost        Place      Scenic Spots\n",
+      "0       Pho    2       Ha Noi         West Lake\n",
+      "1   Bun Cha    3       Ha Noi         West Lake\n",
+      "2   Banh Mi    1  Ho Chi Minh  Ben Thanh Market\n",
+      "3  Banh Xeo    2      Da Nang      My Khe Beach \n",
       "\n",
-      "           Food        Place      Scenic Spots\n",
-      "Cost                                          \n",
-      "1 USD   Banh Mi  Ho Chi Minh  Ben Thanh Market\n",
-      "2 USD  Banh Xeo      Da Nang      My Khe Beach\n",
-      "3 USD   Bun Cha       Ha Noi         West Lake \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 4 entries, 0 to 3\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Food          4 non-null      object \n",
+      " 1   Cost          4 non-null      float64\n",
+      " 2   Place         4 non-null      object \n",
+      " 3   Scenic Spots  4 non-null      object \n",
+      "dtypes: float64(1), object(3)\n",
+      "memory usage: 160.0+ bytes\n",
+      "None \n",
       "\n"
      ]
     }
@@ -258,7 +265,7 @@
     "                        'Cost': [2, 3, 1, 2],\n",
     "                        'Place': ['Ha Noi', 'Ha Noi', 'Ho Chi Minh', 'Da Nang']})\n",
     "# make a unit for cost\n",
-    "df_food['Cost'] = df_food['Cost'].apply(lambda x: str(x) + ' USD')\n",
+    "df_food['Cost'] = df_food['Cost'].apply(lambda x: str(x))\n",
     "# Food is the index\n",
     "# df_food.set_index('Food', inplace=True)\n",
     "print(df_food, '\\n')\n",
@@ -276,9 +283,82 @@
     "df_merge = pd.merge(df_food, df_place, on='Place')\n",
     "\n",
     "print(df_merge, '\\n')\n",
-    "# Group by Place and count the number of food in each place, print just the number of food, and name the column as 'Number of Food'\n",
-    "print(df_merge.groupby('Cost').min(), '\\n')\n",
-    "# print df_merge with all columns in same row"
+    "\n",
+    "# df_merge.groupby(['Place','Food']).count().loc[\"Ha Noi\"].loc[\"Bun Cha\"]\n",
+    "\n",
+    "# Convert column type from object to string\n",
+    "df_merge['Cost'] = df_merge['Cost'].astype(float)\n",
+    "print(df_merge.info(), '\\n')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pivot Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Company   Person  Sales\n",
+      "0    GOOG      Sam    200\n",
+      "1    GOOG  Charlie    120\n",
+      "2    MSFT      Amy    340\n",
+      "3    MSFT  Vanessa    124\n",
+      "4      FB     Carl    243\n",
+      "5      FB    Sarah    350 \n",
+      "\n",
+      "                 Sales\n",
+      "Company Person        \n",
+      "FB      Carl       243\n",
+      "        Sarah      350\n",
+      "GOOG    Charlie    120\n",
+      "        Sam        200\n",
+      "MSFT    Amy        340\n",
+      "        Vanessa    124 \n",
+      "\n",
+      "     A    B  C  D\n",
+      "0  foo  one  x  1\n",
+      "1  foo  one  y  3\n",
+      "2  foo  two  x  2\n",
+      "3  bar  two  y  5\n",
+      "4  bar  one  x  4\n",
+      "5  bar  one  y  1 \n",
+      "\n",
+      "C          x    y\n",
+      "A   B            \n",
+      "bar one  4.0  1.0\n",
+      "    two  NaN  5.0\n",
+      "foo one  1.0  3.0\n",
+      "    two  2.0  NaN \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'Company': ['GOOG', 'GOOG', 'MSFT', 'MSFT', 'FB', 'FB'],\n",
+    "        'Person': ['Sam', 'Charlie', 'Amy', 'Vanessa', 'Carl', 'Sarah'],\n",
+    "        'Sales': [200, 120, 340, 124, 243, 350]}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df, '\\n')\n",
+    "# Pivot table\n",
+    "print(df.pivot_table(values='Sales', index=['Company', 'Person']), '\\n')\n",
+    "\n",
+    "# More complex pivot table\n",
+    "df = pd.DataFrame({'A': ['foo', 'foo', 'foo', 'bar', 'bar', 'bar'],\n",
+    "                         'B': ['one', 'one', 'two', 'two', 'one', 'one'],\n",
+    "                                'C': ['x', 'y', 'x', 'y', 'x', 'y'],\n",
+    "                                            'D': [1, 3, 2, 5, 4, 1]})\n",
+    "print(df, '\\n')\n",
+    "print(df.pivot_table(values='D', index=['A', 'B'], columns=['C']), '\\n')\n"
    ]
   }
  ],
