--- a/Python/leet-code-p3.ipynb
+++ b/Python/leet-code-p3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,49 @@
     "\n",
     "x = Solution()\n",
     "print(x.countGoodStrings(2, 3, 1, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def longestOnes(self, nums: list[int], k: int) -> int:\n",
+    "        zero = maxOnes =s = 0\n",
+    "        pos=1\n",
+    "        l = [0]\n",
+    "        for i,num in enumerate(nums):   \n",
+    "            if num==0:\n",
+    "                zero+=1\n",
+    "                l.append(i)\n",
+    "            if zero>k:\n",
+    "                zero-=1\n",
+    "                s= i-l[pos]-1\n",
+    "                pos+=1\n",
+    "            s+=1\n",
+    "            maxOnes= max(s,maxOnes)\n",
+    "        return maxOnes\n",
+    "\n",
+    "x = Solution()\n",
+    "print(x.longestOnes([1,1,1,0,0,0,1,1,1,1,0],2))\n",
+    "print(x.longestOnes([0,0,1,1,0,0,1,1,1,0\n",
+    "                     ,1,1,0,0,0,1,1,1,1],3))"
    ]
   }
  ],
