random forest classifier

--- a/Python/naive-bayes.ipynb
+++ b/Python/naive-bayes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,6 @@
    ],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from scipy.sparse import coo_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -34,6 +33,8 @@
     "        s = f.readlines()\n",
     "        s = [i.strip().split() for i in s]\n",
     "        data = np.array([[int(i[0]), int(i[1]), int(i[2])] for i in s])\n",
+    "    # data is array of [row, col, value] for sparse matrix, which mean data[row, col] = value, row and col start from 1\n",
+    "    # row is index of email, col is index of word, value is number of word in email\n",
     "\n",
     "    with open(labels_path, 'r') as f:\n",
     "        s = f.readlines()\n",
@@ -46,7 +47,7 @@
     "\n",
     "\n",
     "# Path to data\n",
-    "path = '../email-spam-filter/'\n",
+    "path = '../datasets/email-spam-filter/'\n",
     "train_data_path = 'train-features.txt'\n",
     "train_labels_path = 'train-labels.txt'\n",
     "test_data_path = 'test-features.txt'\n",
@@ -55,6 +56,7 @@
     "# Get matrix data and labels for naive Bayes\n",
     "train_data, train_labels = get_data_labels(\n",
     "    path+train_data_path, path+train_labels_path)\n",
+    "\n",
     "test_data, test_labels = get_data_labels(\n",
     "    path+test_data_path, path+test_labels_path)\n",
     "\n",
@@ -66,22 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "deque(['12', 123])\n"
+      "Accuracy: 95.77%\n"
      ]
     }
    ],
    "source": [
-    "from collections import deque\n",
-    "q = deque(['12'])\n",
-    "q.append(123)\n",
-    "print(q)"
+    "# Random Forest classifier for comparison\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "clf = RandomForestClassifier(n_estimators=100, max_depth=4, random_state=0)\n",
+    "clf.fit(train_data, train_labels)\n",
+    "pre = clf.predict(test_data)\n",
+    "print(f\"Accuracy: {round(accuracy_score(test_labels, pre)*100,2)}%\")\n"
    ]
   }
  ],
