random forest classifier

--- a/Python/naive-bayes.ipynb
+++ b/Python/naive-bayes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,24 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 95.77%\n"
+      "Accuracy: 95.38%\n"
      ]
     }
    ],
    "source": [
     "# Random Forest classifier for comparison\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "clf = RandomForestClassifier(n_estimators=100, max_depth=4, random_state=0)\n",
+    "clf = RandomForestClassifier(n_estimators=150, max_depth=3, random_state=0,criterion='entropy')\n",
     "clf.fit(train_data, train_labels)\n",
     "pre = clf.predict(test_data)\n",
-    "print(f\"Accuracy: {round(accuracy_score(test_labels, pre)*100,2)}%\")\n"
+    "print(f\"Accuracy: {round(accuracy_score(test_labels, pre)*100,2)}%\")\n",
+    "\n",
+    "# criterion='gini' mean use Gini impurity to split, 'entropy' mean use information gain to split\n",
+    "# Gini impurity is im"
    ]
   }
  ],
