--- a/Python/naive-bayes.ipynb
+++ b/Python/naive-bayes.ipynb
@@ -10,14 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 (700, 2500)\n",
       "Accuracy: 98.08%\n"
      ]
     }
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -83,13 +82,11 @@
    "source": [
     "# Random Forest classifier for comparison\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "clf = RandomForestClassifier(n_estimators=150, max_depth=3, random_state=0,criterion='entropy')\n",
+    "clf = RandomForestClassifier(\n",
+    "    n_estimators=150, max_depth=3, random_state=0, criterion='entropy')\n",
     "clf.fit(train_data, train_labels)\n",
     "pre = clf.predict(test_data)\n",
-    "print(f\"Accuracy: {round(accuracy_score(test_labels, pre)*100,2)}%\")\n",
-    "\n",
-    "# criterion='gini' mean use Gini impurity to split, 'entropy' mean use information gain to split\n",
-    "# Gini impurity is im"
+    "print(f\"Accuracy: {round(accuracy_score(test_labels, pre)*100,2)}%\")\n"
    ]
   }
  ],
