--- a/Python/leet-code-p3.ipynb
+++ b/Python/leet-code-p3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +85,104 @@
     "print(x.longestOnes([1,1,1,0,0,0,1,1,1,1,0],2))\n",
     "print(x.longestOnes([0,0,1,1,0,0,1,1,1,0\n",
     "                     ,1,1,0,0,0,1,1,1,1],3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def isBipartite(self, graph: List[List[int]]):\n",
+    "        color = {}\n",
+    "        def dfs(node, c=0):\n",
+    "            if node in color:\n",
+    "                return color[node]==c\n",
+    "            color[node]=c\n",
+    "            return all(dfs(n,c^1) for n in graph[node])\n",
+    "        return all(dfs(node) for node in range(len(graph)) if node not in color)\n",
+    "x = Solution()\n",
+    "print(x.isBipartite([[1,3],[0,2],[1,3],[0,2]]))\n",
+    "l = [1,2,3,4]\n",
+    "print(all(i>6 for i in l))\n",
+    "\n",
+    "\n",
+    "# solve above problem in C++\n",
+    "# class Solution {\n",
+    "# public:\n",
+    "#     bool isBipartite(vector<vector<int>>& graph) {\n",
+    "#         vector<int> color(graph.size(),0);\n",
+    "#         for(int i=0;i<graph.size();i++){\n",
+    "#             if(color[i]==0 && !dfs(graph,color,i,1))\n",
+    "#                 return false;\n",
+    "#         }\n",
+    "#         return true;\n",
+    "#     }\n",
+    "#     bool dfs(vector<vector<int>>& graph,vector<int>& color,int node,int c){\n",
+    "#         if(color[node]!=0)\n",
+    "#             return color[node]==c;\n",
+    "#         color[node]=c;\n",
+    "#         for(int n:graph[node]){\n",
+    "#             if(!dfs(graph,color,n,c^1))\n",
+    "#                 return false;\n",
+    "#         }\n",
+    "#         return true;\n",
+    "#     }\n",
+    "# };\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1512\n",
+      "0.7031629085540771\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from time import time\n",
+    "class Solution:\n",
+    "    def threeSumClosest(self, nums: List[int], target: int) -> int:\n",
+    "        n= len(nums)\n",
+    "        nums.sort()\n",
+    "        mins = float('inf')\n",
+    "        ans =0 \n",
+    "        for i in range(n-2):\n",
+    "            j,k = i+1,n-1\n",
+    "            while j<k:\n",
+    "                x = nums[i]+nums[j]+nums[k]\n",
+    "                if x==target:\n",
+    "                    return x\n",
+    "                elif x<target:\n",
+    "                    j+=1\n",
+    "                else:\n",
+    "                    k-=1\n",
+    "                if abs(x-target)<mins:\n",
+    "                    mins = abs(x-target)\n",
+    "                    ans = x\n",
+    "        return ans\n",
+    "t = time()\n",
+    "l = np.random.randint(-1000,1000,1000)\n",
+    "print(x.threeSumClosest(l,1512))\n",
+    "print(time()-t)\n"
    ]
   }
  ],
