--- a/Python/leet-code-p3.ipynb
+++ b/Python/leet-code-p3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +45,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +147,7 @@
      "output_type": "stream",
      "text": [
       "1512\n",
-      "0.7031629085540771\n"
+      "0.5096361637115479\n"
      ]
     }
    ],
@@ -181,6 +176,7 @@
     "        return ans\n",
     "t = time()\n",
     "l = np.random.randint(-1000,1000,1000)\n",
+    "x = Solution()\n",
     "print(x.threeSumClosest(l,1512))\n",
     "print(time()-t)\n"
    ]
