--- a/Python/leet-code-p3.ipynb
+++ b/Python/leet-code-p3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
      "output_type": "stream",
      "text": [
       "1512\n",
-      "0.4174172878265381\n"
+      "0.36901211738586426\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,16 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\n",
-      "b\n",
-      "c\n",
+      "False\n",
       "True\n"
      ]
     }
@@ -473,6 +471,83 @@
     "    dk2[val] = dk2.get(val,0)+1\n",
     "print(dk1==dk2)\n",
     "# print(d1, d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['there', 'is', 'a', 'cat']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"there is, a cat.\"\n",
+    "x = x.split() \n",
+    "# remove comma and period\n",
+    "x = [i.strip(\",.\") for i in x]\n",
+    "x = [i.strip(\",.\") for i in x]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class Graph:\n",
+    "#     def __init__(self):\n",
+    "#         self.adj = [[] for _ in range(n+1)]\n",
+    "#         self.visited = [0 for _ in range(n+1)]\n",
+    "#         self.stack = []\n",
+    "#         self.check_cycle = False\n",
+    "\n",
+    "#     def addEdge(self, u, v):\n",
+    "#         self.adj[u].append(v)\n",
+    "\n",
+    "#     def dfs(self, v):\n",
+    "#         self.visited[v] = 1\n",
+    "#         for i in self.adj[v]:\n",
+    "#             if self.visited[i] == 0:\n",
+    "#                 self.dfs(i)\n",
+    "#             if self.visited[i] == 1:\n",
+    "#                 self.check_cycle = True\n",
+    "#         self.visited[v] = 2\n",
+    "#         self.stack.append(v)\n",
+    "\n",
+    "\n",
+    "# n, m = map(int, input().split())\n",
+    "# g1 = Graph()\n",
+    "# g2 = Graph()\n",
+    "# for i in range(m):\n",
+    "#     u, v = map(int, input().split())\n",
+    "#     g1.addEdge(u, v)\n",
+    "#     g2.addEdge(v, u)\n",
+    "# for i in range(1, n+1):\n",
+    "#     if not g1.visited[i]:\n",
+    "#         g1.dfs(i)\n",
+    "#     if g1.check_cycle:\n",
+    "#         print(\"NO\")\n",
+    "#         break\n",
+    "# else:\n",
+    "#     g2.addEdge(g1.stack[-1], g1.stack[0])\n",
+    "#     count = 0\n",
+    "#     for i in range(1, n+1):\n",
+    "#         if g2.visited[i] == 0:\n",
+    "#             g2.dfs(i)\n",
+    "#             count += 1\n",
+    "#         if count > 1:\n",
+    "#             print(\"NO\")\n",
+    "#             break\n",
+    "#     else:\n",
+    "#         print(\"YES\")\n",
+    "#         print(g1.stack[0], g1.stack[-1])\n"
    ]
   }
  ],
