--- a/Python/leet-code-p4.ipynb
+++ b/Python/leet-code-p4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,31 +15,31 @@
     }
    ],
    "source": [
-    "grid = [[3,2,1],[1,7,6],[2,7,7]]\n",
+    "grid = [[3, 2, 1], [1, 7, 6], [2, 7, 7]]\n",
     "# grid = [[3,1,2,2],[1,4,4,5],[2,4,2,2],[2,4,2,2]]\n",
-    "grid = [[1,2],[2,1]]\n",
+    "grid = [[1, 2], [2, 1]]\n",
     "freq = {}\n",
     "for i in zip(*grid):\n",
-    "    freq[i] = freq.get(i,0) + 1\n",
-    "ans =0\n",
+    "    freq[i] = freq.get(i, 0) + 1\n",
+    "ans = 0\n",
     "for i in grid:\n",
-    "    if freq.get(tuple(i),0)>0:\n",
-    "        ans +=freq[tuple(i)]\n",
+    "    if freq.get(tuple(i), 0) > 0:\n",
+    "        ans += freq[tuple(i)]\n",
     "print(freq)\n",
-    "print(ans)"
+    "print(ans)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "816\n",
-      "23 49 70 -8 89 -22 65 -25 2 22 77 -5 20 -63 98 -52 -74 84 -83 67 -33 -67 -51 1 -61 -84 85 71 76 -74 7 61 -55 6 -11 -19 52 19 80 19 -70 4 22 -57 6 -42 58 2 -55 25 -50 -36 -36 -24 16 55 80 100 90 43 82 88 3 -16 -100 -71 3 -93 58 -68 17 -9 1 -40 1 60 -23 17 55 21 -2 5 -39 99 87 -14 -18 79 -9 -37 56 69 69 73 -45 -59 -13 31 28 15 45 -8 80 -45 56 -41 -30 74 82 67 74 -44 69 -26 -78 -98 70 64 -54 -6 -13 -63 -9 -78 -19 -64 86 30 29 48 -90 52 19 -71 23 21 14 54 12 -55 72 -91 77 -53 57 84 93 48 22 -62 -7 -34 -96 -62 16 25 -36 60 18 -59 -32 -97 79 44 -51 -88 -11 65 -73 -82 -85 56 82 45 45 32 -89 -91 8 16 92 40 94 -38 -56 -41 -57 -94 -62 94 60 39 -35 92 -2 -41 22 -70 41 -92 -27 -67 -93 76 -25 -11 -27 6 78 -81 20 -44 49 -29 9 33 -63 -70 1 71 87 -37 76 59 39 57 42 -17 -95 77 3 -57 -49 34 -64 46 81 99 75 -100 64 -47 -33 48 -51 -46 -9 10 -45 -27 -75 -47 48 -37 -20 -20 -22 59 -28 39 75 -3 99 -17 -28 -80 -70 96 43 -82 56 64 -94 -16 63 -10 78 68 -41 65 -37 86 35 41 -76 98 -26 56 58 79 76 80 86 -51 35 56 -90 -89 28 31 93 -62 -8 -45 71 -70 -41 59 -26 49 -43 94 68 -26 -97 -81 -96 17 90 -97 67 -35 35 96 -17 -48 -56 -79 -51 63 31 18 71 12 24 95 -42 63 60 31 0 4 -15 98 56 2 -85 47 -70 50 56 5 77 -26 -22 -49 21 46 72 55 -27 61 51 16 -40 30 -85 -98 92 -60 72 -11 95 11 72 -22 -66 -24 94 85 -19 -50 88 62 80 -12 -96 89 44 -18 -34 -49 -53 -36 -60 -65 45 28 22 -45 22 66 43 -44 30 -45 -28 71 -39 -85 -94 -49 -59 -97 -13 -44 46 36 -78 33 64 0 74 -43 76 35 -76 -62 -4 87 6 32 88 -9 71 -66 -67 -83 82 99 88 -86 54 -17 -36 13 58 83 80 60 -31 -32 6 -55 -96 -100 -24 -9 34 85 15 20 44 -6 -57 -74 92 18 -53 41 -28 80 -94 -13 -44 62 -99 -91 37 76 -23 -95 -53 -51 -11 82 -24 -60 64 11 -24 -33 36 -61 -60 23 73 -34 63 71 48 66 -45 -32 16 -31 -34 89 -47 22 -19 23 23 -67 -49 -94 14 -64 54 41 71 72 59 6 99 -37 -56 63 43 20 -45 34 -28 69 11 84 27 -42 50 -87 -88 -5 -32 90 -8 -86 -23 -36 -19 74 -96 58 -5 -94 -81 -86 -70 61 42 87 -39 57 -52 -54 -32 64 77 -41 36 35 -82 -23 60 83 -43 -79 -68 -11 5 -89 -64 -18 -53 75 -58 95 -85 87 50 -51 -2 82 5 -30 -68 16 -5 34 21 13 30 100 -80 20 -53 -89 -33 -60 12 -77 -16 6 84 16 94 13 -44 2 85 83 73 97 -93 -88 -90 -60 -81 -94 58 32 -52 34 -94 -10 60 -43 62 -37 62 -67 -41 -98 -60 -30 99 55 28 45 71 -65 -82 88 60 4 -17 -41 -69 -61 -9 -29 -29 7 -60 16 64 95 -48 80 40 -15 30 49 34 16 -100 73 99 71 43 -51 -15 44 3 -7 -48 -44 -94 53 58 79 -52 -92 62 70 -11 5 43 -94 -95 5 -99 83 60 35 -28 -33 90 57 83 42 25 89 62 72 -79 58 70 -21 -90 77 -21 -9 -67 -26 64 -25 -12 47 -43 -53 -11 79 -48 96 17 99 -68 -19 -74 4 6 0 38 38 78 -98 -54 3 -64 -36 36 -32 60 68 86 74 74 18 54 -40 -14 31 2 -95 -62 -2 33 25 29 42 -29 27 99 -78 -36 13 19 48 8 50 9 76 91 79 62 -78 -62 14 10 16 21 -25 88 -14 72 -36 -42 -70 78 50 -51 59 -18 -52 23 74 -88 53 -28 49 -31 89 11 -47 -63 -56\n"
+      "658\n",
+      "-51 -15 -57 -56 -5 -66 -92 88 -63 -20 73 -57 -26 12 75 -41 24 86 99 -39 -20 -51 -53 58 21 81 -83 46 31 -92 -42 96 4 -59 44 -94 12 -28 -22 46 -2 -33 -19 19 34 15 100 -10 -74 36 -50 63 54 -60 -57 49 7 13 -39 79 -91 38 39 47 4 1 -73 -96 -24 -57 74 75 56 4 65 -33 -56 7 12 -44 2 -29 -3 37 4 -23 -82 -80 -63 15 -17 86 80 76 -37 -60 -12 -38 77 -19 -75 61 -99 -20 51 21 27 -12 85 41 23 50 7 -84 -89 46 -7 46 -15 66 -11 32 -58 -71 -60 51 87 -50 -94 -100 46 35 90 -45 -54 52 81 48 82 72 47 9 -34 44 -49 6 -28 -57 -87 34 -54 -96 69 0 -5 23 -91 51 -43 36 54 10 -21 94 57 55 -71 84 -50 98 55 55 -1 -26 84 -45 47 -50 -92 -94 88 80 -4 78 -20 65 72 -9 53 46 -15 34 -50 -48 -88 79 0 37 -72 71 75 1 13 6 91 -55 -43 -74 81 -29 40 0 -49 79 -77 -18 4 -84 54 92 -83 41 -53 -29 -49 42 55 -54 -52 -93 -96 -45 -18 -92 -38 -24 78 84 66 -88 74 83 22 23 -28 -29 56 -65 -35 48 -26 -60 98 78 -15 91 -41 37 88 -58 -77 56 13 -52 -17 -8 -11 27 61 9 89 35 96 9 -55 -11 29 32 -29 -21 72 -3 -54 -97 -62 83 -27 11 -24 62 -18 62 57 47 6 -19 -3 -62 -94 -50 47 12 93 1 50 -93 -9 95 90 -10 86 2 22 48 43 -48 16 90 100 82 -94 39 -18 -21 -54 90 -26 -67 51 5 84 -41 -60 90 -50 39 -45 -89 -15 -57 24 -63 -30 -42 29 55 -38 96 19 89 -55 46 -69 -73 46 69 -77 93 65 13 -92 13 62 -46 -57 -60 -65 -26 -73 -8 -87 -72 -78 -69 98 -54 24 28 18 -84 26 86 7 3 31 13 84 69 -6 -59 -3 96 -52 -46 -57 -17 88 53 -67 57 -67 61 51 92 -29 -78 23 -31 -70 -84 -37 85 -32 -66 -95 -42 -14 -45 -48 -51 -63 -88 -79 -67 -18 -50 4 78 -94 100 -6 -81 -51 54 -3 -61 12 -55 1 99 19 21 52 -5 63 91 79 -40 1 10 -9 26 -27 -33 -9 11 -83 -87 -71 -47 53 -80 -16 -24 47 85 -86 -8 -60 -1 -75 48 88 93 73 -24 19 36 76 -82 21 62 94 -91 71 93 41 72 85 33 -31 36 -97 -17 50 47 -17 -78 44 -68 -55 -27 -88 71 9 58 89 94 4 96 65 -1 87 -82 -64 -51 86 -64 -64 -63 85 -35 -95 -49 24 -59 30 -36 -3 97 84 34 87 -100 17 -19 1 42 -68 -32 15 28 9 -68 76 86 16 -95 66 -16 -32 -92 -30 46 37 -31 -10 47 66 -14 16 -41 0 16 -69 -79 -67 4 8 -82 -95 85 -2 97 -64 68 45 -55 97 -77 -11 -57 -16 78 -29 -44 -11 -72 25 -9 -60 -77 36 13 -80 15 75 -18 -34 56 98 7 99 61 -98 22 -72 2 -36 -42 -26 4 66 -43 -67 -19 24 -4 -43 35 18 43 -38 85 50 -87 65 -24 -67 95 87 -24 47 -49 20 95 64 -56 57 -27 -38 -99 -37 -19 -14 1 85 -37 -28 16 82 -26 -98 0 84 96 -20 -53\n"
      ]
     }
    ],
@@ -57,11 +57,11 @@
     "# generate a list of random numbers for this problem\n",
     "import random\n",
     "import pyperclip\n",
-    "n = random.randint(500,1000)\n",
+    "n = random.randint(500, 1000)\n",
     "print(n)\n",
     "# for i in range(n):\n",
-    "nums = [random.randint(-100,100) for _ in range(n)]\n",
-    "s = ' '.join(map(str,nums))\n",
+    "nums = [random.randint(-100, 100) for _ in range(n)]\n",
+    "s = ' '.join(map(str, nums))\n",
     "print(s)\n",
     "pyperclip.copy(s)\n",
     "\n",
@@ -69,26 +69,64 @@
     "# print(list(map(int,s.split())))\n",
     "\n",
     "# copy in clipboard in windows\n",
-    "# pyperclip.copy(' '.join(map(str,nums)))"
+    "# pyperclip.copy(' '.join(map(str,nums)))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Codeforce : https://codeforces.com/contest/1831/problem/C"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi!\n",
-      "I am a member of \"IT YKA Club\".\n",
-      "Nice to meet you!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Hi!\\nI am a member of \\\"IT YKA Club\\\".\\nNice to meet you!\")"
+    "import sys\n",
+    "from collections import deque,defaultdict\n",
+    "# sys.stdin = open('test.inp', 'r')\n",
+    "# sys.stdout = open('test.out', 'w')\n",
+    "input = sys.stdin.readline\n",
+    "t = int(input())\n",
+    "while t:\n",
+    "    t -= 1\n",
+    "    n = int(input())\n",
+    "    adj = defaultdict(list)\n",
+    "    pos = {}\n",
+    "    q = deque()\n",
+    "    check = [False] * (n+1)\n",
+    "    for i in range(n-1):\n",
+    "        u, v = list(map(int, input().split()))\n",
+    "        adj[u].append(v)\n",
+    "        adj[v].append(u)\n",
+    "        pos[(u, v)] = i\n",
+    "        pos[(v, u)] = i\n",
+    "        if u == 1:\n",
+    "            q.append((v, i))\n",
+    "            check[i] = True\n",
+    "        elif v == 1:\n",
+    "            q.append((u, i))\n",
+    "            check[i] = True\n",
+    "    count = 0\n",
+    "    while q:\n",
+    "        count += 1\n",
+    "        q_new = deque()\n",
+    "        while q:\n",
+    "            u, i = q.popleft()\n",
+    "            for v in adj[u]:\n",
+    "                if check[pos[(u, v)]]:\n",
+    "                    continue\n",
+    "                if pos[(u, v)] < i:\n",
+    "                    q_new.append((v, pos[(u, v)]))\n",
+    "                else:\n",
+    "                    q.append((v, pos[(u, v)]))\n",
+    "                check[pos[(u, v)]] = True\n",
+    "        q = q_new\n",
+    "    sys.stdout.write(str(count) + '\\n')\n"
    ]
   }
  ],
