--- a/Python/leet-code-p6.ipynb
+++ b/Python/leet-code-p6.ipynb
@@ -282,6 +282,131 @@
     "            out('0')\n",
     "    out('\\n')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b  c\n",
+       "0  1  4  5\n",
+       "1  2  5  7\n",
+       "2  3  6  9"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# save as csv\n",
+    "df = pd.DataFrame({'a': [1, 2, 3], 'b': [4, 5, 6]})\n",
+    "df[\"c\"]=df[\"a\"]+df[\"b\"]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "s1 = input()\n",
+    "s2 = input()\n",
+    "print(len(re.sub(s2,' ',s1,flags=re.IGNORECASE).split()))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "worker\n",
+      "worker\n",
+      "worker\n",
+      "worker\n",
+      "worker\n",
+      "all done\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multi thread in python\n",
+    "import threading\n",
+    "import time\n",
+    "import random\n",
+    "def worker():\n",
+    "    print(\"worker\")\n",
+    "    time.sleep(random.randint(1, 10))\n",
+    "    return\n",
+    "threads = []\n",
+    "for i in range(5):\n",
+    "    t = threading.Thread(target=worker)\n",
+    "    threads.append(t)\n",
+    "    t.start()\n",
+    "for t in threads:\n",
+    "    if type(t) is threading.Thread:\n",
+    "        t.join()\n",
+    "print(\"all done\")\n"
+   ]
   }
  ],
  "metadata": {
