Sunday the king play 🐧

--- a/Python/leet-code-p6.ipynb
+++ b/Python/leet-code-p6.ipynb
@@ -515,6 +515,144 @@
     "else:\n",
     "    output(\"YES\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countPaths(self, grid: List[List[int]]) -> int:\n",
+    "        m, n = len(grid), len(grid[0])\n",
+    "        dp = [[0]*n for _ in range(m)]\n",
+    "        directions = [(0, 1), (0, -1), (1, 0), (-1, 0)]\n",
+    "        mod = 10**9+7\n",
+    "\n",
+    "        def dfs(i, j):\n",
+    "            if dp[i][j]:\n",
+    "                return dp[i][j]\n",
+    "            ans = 1\n",
+    "            for x, y in directions:\n",
+    "                if 0 <= i+x < m and 0 <= j+y < n and grid[i+x][j+y] < grid[i][j]:\n",
+    "                    ans += dfs(i+x, j+y) % mod\n",
+    "            dp[i][j] = ans\n",
+    "            return ans\n",
+    "        return sum(dfs(i, j) for i in range(m) for j in range(n)) % mod\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def distanceTraveled(self, mainTank: int, additionalTank: int) -> int:\n",
+    "        ans = 0\n",
+    "        while mainTank >=5 and additionalTank > 0:\n",
+    "            mainTank -= 4\n",
+    "            ans += 5*10\n",
+    "            additionalTank -=1\n",
+    "        if mainTank > 0:\n",
+    "            ans += mainTank*10\n",
+    "        return ans\n",
+    "s = Solution()\n",
+    "print(s.distanceTraveled(4,30))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findValueOfPartition(self, nums: list[int]) -> int:\n",
+    "        nums.sort()\n",
+    "        ans = float('inf')\n",
+    "        for i in range(1, len(nums)):\n",
+    "            ans = min(ans, nums[i]-nums[i-1])\n",
+    "        return ans\n",
+    "s = Solution()\n",
+    "print(s.findValueOfPartition([1,5,8,300,100,400,100,23,12412412]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 5]\n",
+      "[3, 3, 1]\n",
+      "[3, 1, 3]\n",
+      "[3, 1, 5]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    chosen = [False]*100\n",
+    "    ans = []\n",
+    "\n",
+    "    def printP(self, ans):\n",
+    "        print(ans)\n",
+    "\n",
+    "    def permutation(self, nums: list[int]) -> list[list[int]]:\n",
+    "        n = len(nums)\n",
+    "        if len(self.ans) == n:\n",
+    "            self.printP(self.ans)\n",
+    "            return\n",
+    "        for i in range(n):\n",
+    "            if self.chosen[i]:\n",
+    "                continue\n",
+    "            if len(self.ans) == 0:\n",
+    "                self.chosen[i] = True\n",
+    "                self.ans.append(nums[i])\n",
+    "                self.permutation(nums)\n",
+    "            \n",
+    "            if self.ans[-1] % nums[i] == 0 or nums[i] % self.ans[-1] == 0:\n",
+    "                self.chosen[i] = True\n",
+    "                self.ans.append(nums[i])\n",
+    "                self.permutation(nums)\n",
+    "            else:\n",
+    "                continue\n",
+    "            self.chosen[i] = False\n",
+    "            if len(self.ans) > 0:\n",
+    "                self.ans.pop()\n",
+    "\n",
+    "\n",
+    "s = Solution()\n",
+    "print(s.permutation([3, 5, 1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
