--- a/Python/pandas-praticing.ipynb
+++ b/Python/pandas-praticing.ipynb
@@ -448,7 +448,28 @@
     "df_penguin.drop('Unnamed: 0', axis=1, inplace=True)\n",
     "print(df_penguin.head(10), '\\n')\n",
     "# count number of male and female penguins\n",
-    "df_penguin['Sex'].value_counts().to_dict()\n"
+    "df_penguin['Sex'].value_counts().to_dict()\n",
+    "df_penguin[\"Species\"].co\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_penguin.apply()"
    ]
   }
  ],
